@@ -671,6 +671,8 @@ enum netperf_output_name {
   P99_LATENCY,
   MEAN_LATENCY,
   STDDEV_LATENCY,
+  LOCAL_SOCKET_PRIO,
+  REMOTE_SOCKET_PRIO,
   COMMAND_LINE,    /* COMMAND_LINE should always be "last" */
   OUTPUT_END,
   NETPERF_OUTPUT_MAX
@@ -1273,6 +1275,10 @@ netperf_output_enum_to_str(enum netperf_output_name output_name)
     return "MEAN_LATENCY";
   case STDDEV_LATENCY:
     return "STDDEV_LATENCY";
+  case LOCAL_SOCKET_PRIO:
+    return "LOCAL_SOCKET_PRIO";
+  case REMOTE_SOCKET_PRIO:
+    return "REMOTE_SOCKET_PRIO";
   case OUTPUT_END:
     return "OUTPUT_END";
   default:
@@ -3729,6 +3735,26 @@ print_omni_init_list() {
   netperf_output_source[i].output_default = 0;
   netperf_output_source[i].output_group = OMNI_WANT_STATS;
 
+  i = LOCAL_SOCKET_PRIO;
+  netperf_output_source[i].output_name = LOCAL_SOCKET_PRIO;
+  netperf_output_source[i].line[0] = "Local";
+  netperf_output_source[i].line[1] = "Socket";
+  netperf_output_source[i].line[2] = "Priority";
+  netperf_output_source[i].format = "%d";
+  netperf_output_source[i].display_value = &local_socket_prio;
+  netperf_output_source[i].max_line_len = NETPERF_LINE_MAX(i);
+  netperf_output_source[i].tot_line_len = NETPERF_LINE_TOT(i);
+
+  i = REMOTE_SOCKET_PRIO;
+  netperf_output_source[i].output_name = REMOTE_SOCKET_PRIO;
+  netperf_output_source[i].line[0] = "Remote";
+  netperf_output_source[i].line[1] = "Socket";
+  netperf_output_source[i].line[2] = "Priority";
+  netperf_output_source[i].format = "%d";
+  netperf_output_source[i].display_value = &remote_socket_prio;
+  netperf_output_source[i].max_line_len =  NETPERF_LINE_MAX(i);
+  netperf_output_source[i].tot_line_len =  NETPERF_LINE_TOT(i);
+
   netperf_output_source[OUTPUT_END].output_name = OUTPUT_END;
   netperf_output_source[OUTPUT_END].line[0] = "This";
   netperf_output_source[OUTPUT_END].line[1] = "Is";
@@ -4918,7 +4944,8 @@ send_omni_inner(char remote_host[], unsigned int legacy_caller, char header_str[
       omni_request->recv_offset	           = remote_recv_offset;
       omni_request->recv_width             = recv_width;
       omni_request->response_size	   = rsp_size;
-      
+      omni_request->socket_prio            = remote_socket_prio;
+
       /* we have no else clauses here because we previously set flags
 	 to zero above raj 20090803 */
       if (rem_nodelay)
@@ -5020,6 +5047,8 @@ send_omni_inner(char remote_host[], unsigned int legacy_caller, char header_str[
 	remote_cpu_rate     = omni_response->cpu_rate;
 	remote_send_width   = omni_response->send_width;
 	remote_recv_width   = omni_response->recv_width;
+	remote_socket_prio  = omni_response->socket_prio;
+
 	/* make sure that port numbers are in network order because
 	   recv_response will have put everything into host order */
 	set_port_number(remote_res,
@@ -6029,6 +6058,7 @@ recv_omni()
   loc_sndavoid    = omni_request->so_sndavoid;
   routing_allowed = (omni_request->flags) & OMNI_ROUTING_ALLOWED;
   want_keepalive  = (omni_request->flags) & OMNI_WANT_KEEPALIVE;
+  local_socket_prio = omni_request->socket_prio;
 
 #ifdef WANT_INTERVALS
   interval_usecs = omni_request->interval_usecs;
@@ -6093,6 +6123,8 @@ recv_omni()
 
   omni_response->send_size = omni_request->send_size;
   omni_response->send_width = omni_request->send_width;
+  omni_response->socket_prio = local_socket_prio;
+
   if (omni_request->direction & NETPERF_XMIT) {
 #ifdef fo
     /* do we need to set multicast ttl? */
